Add: summary of B. Simons' blog post

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -510,6 +510,10 @@
       <li lang="nl">Simons, Bart:
         <a href="http://www.anysurfer.be/nl/blog/detail/europese-richtlijn-wie-doet-wat">Europese richtlijn: wie doet wat?</a>,
         <i class="blog">AnySurfer blog</i>, 31.01.2017.
+        <br />This blog post explains what types of content are affected by the Europan accessibility directive,
+        lists the laws and decrees that have been published by governments in Belgium,
+        provides links to the template and methodology for conformity declarations
+        and lists the exceptions to which the directive does not apply.
       </li>
       <li>Aalen, Ida:
         <a href="https://medium.com/confrere/its-illegal-to-have-an-inaccessible-website-in-norway-and-that-s-good-news-for-all-of-us-b59a9e929d54">It’s illegal to have an inaccessible website in Norway — and that’s good news for all of us</a>,
