Add: Grundy: Making a Better Custom Select Element

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -364,6 +364,11 @@
         <a href="https://www.a11ywithlindsey.com/blog/how-accessibility-taught-better-javascript-part-one">How Accessibility Taught me to be Better at JavaScript - Part One</a>
         <i class="blog">a11y with Lindsey</i>, 15.10.2019.
       </li>
+      <li>Grundy, Julie:
+        <a href="https://24ways.org/2019/making-a-better-custom-select-element">Making a Better Custom Select Element</a>,
+        <i class="website">24 Ways</i>, 01.12.2019.
+        <!--@@check accessibility-->
+      </li>
     </ul>
 
     <p>Angular and accessibility:</p>
