--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -373,6 +373,10 @@
 
     <p>Angular and accessibility:</p>
     <ul>
+      <li>
+        <a href="https://angular.io/guide/accessibility">Accessibility in Angular</a>,
+        <i class="website">Angular Docs</i>.
+      </li>
       <li>Syncfusion:
         <a href="http://ej2.syncfusion.com/15.4.17/angular/documentation/index.html">Essential JS 2 for Angular</a>:
         <q>a collection modern TypeScript based true Angular Components</q>.
