Add: Angular Material: Accessibility / a11y package

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -377,6 +377,10 @@
         <a href="https://angular.io/guide/accessibility">Accessibility in Angular</a>,
         <i class="website">Angular Docs</i>.
       </li>
+      <li>
+        <a href="https://material.angular.io/cdk/a11y/overview">Accessibility / a11y package</a>,
+        <i class="website">Angular Material</i>.
+      </li>
       <li>Syncfusion:
         <a href="http://ej2.syncfusion.com/15.4.17/angular/documentation/index.html">Essential JS 2 for Angular</a>:
         <q>a collection modern TypeScript based true Angular Components</q>.
