Add: Ogston: Single page applications, Angular.js and accessibility

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -381,6 +381,11 @@
         <a href="https://material.angular.io/cdk/a11y/overview">Accessibility / a11y package</a>,
         <i class="website">Angular Material</i>.
       </li>
+      <li>Ogston, Gavin:
+        <a href="https://simplyaccessible.com/article/spangular-accessibility/">Single page applications, Angular.js and accessibility</a>,
+        <i class="website">Simply Accessible</i>, 03.03.2015.
+        <br />This article is based on the old AccessibleJS, so code samples are outdated.
+      </li>
       <li>Syncfusion:
         <a href="http://ej2.syncfusion.com/15.4.17/angular/documentation/index.html">Essential JS 2 for Angular</a>:
         <q>a collection modern TypeScript based true Angular Components</q>.
