Add: Shaked: Angular and Accessibility

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -386,6 +386,10 @@
         <i class="website">Simply Accessible</i>, 03.03.2015.
         <br />This article is based on the old AccessibleJS, so code samples are outdated.
       </li>
+      <li>Shaked, Uri:
+        <a href="https://medium.com/dailyjs/angular-and-accessibility-8ae1f601803a">Angular and Accessibility</a>,
+        <i class="blog">DailyJS on Medium</i>, 07.04.2017.
+      </li>
       <li>Syncfusion:
         <a href="http://ej2.syncfusion.com/15.4.17/angular/documentation/index.html">Essential JS 2 for Angular</a>:
         <q>a collection modern TypeScript based true Angular Components</q>.
