Add: Vinkle: Creating accessible forms with Angular

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -390,6 +390,10 @@
         <a href="https://medium.com/dailyjs/angular-and-accessibility-8ae1f601803a">Angular and Accessibility</a>,
         <i class="blog">DailyJS on Medium</i>, 07.04.2017.
       </li>
+      <li>Vinkle, Scott:
+        <a href="https://simplyaccessible.com/article/accessible-forms-angular/">Creating accessible forms with Angular</a>,
+        <i class="website">Simply Accessible</i>, 18.05.2017.
+      </li>
       <li>Syncfusion:
         <a href="http://ej2.syncfusion.com/15.4.17/angular/documentation/index.html">Essential JS 2 for Angular</a>:
         <q>a collection modern TypeScript based true Angular Components</q>.
