Add: drag and drop: Are there any drag and drop UI development techniques ...?

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -371,6 +371,14 @@
       </li>
     </ul>
 
+    <p>Drag and drop:</p>
+    <ul>
+      <li>
+        <a href="https://ux.stackexchange.com/questions/100488/are-there-any-drag-and-drop-ui-development-techniques-that-are-wcag-compliant">Are there any drag and drop <abbr>UI</abbr> development techniques that are <abbr>WCAG</abbr> compliant?</a>
+        Question posted on User Experience Stack Exchange in October 2016.
+      </li>
+    </ul>
+
     <p>Angular and accessibility:</p>
     <ul>
       <li>
