--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -377,6 +377,10 @@
         <a href="https://ux.stackexchange.com/questions/100488/are-there-any-drag-and-drop-ui-development-techniques-that-are-wcag-compliant">Are there any drag and drop <abbr>UI</abbr> development techniques that are <abbr>WCAG</abbr> compliant?</a>
         Question posted on User Experience Stack Exchange in October 2016.
       </li>
+      <li>Lemon, Gez:
+        <a href="https://dev.opera.com/articles/accessible-drag-and-drop/">Accessible Drag and Drop Using <abbr>WAI</abbr>-<abbr>ARIA</abbr></a>,
+        <i class="website">Dev.Opera</i>, 08.07.2009.
+      </li>
     </ul>
 
     <p>Angular and accessibility:</p>
