Add: WAI-ARIA: aria-dropeffect (Property)

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -381,6 +381,18 @@
         <a href="https://dev.opera.com/articles/accessible-drag-and-drop/">Accessible Drag and Drop Using <abbr>WAI</abbr>-<abbr>ARIA</abbr></a>,
         <i class="website">Dev.Opera</i>, 08.07.2009.
       </li>
+      <li>
+        <a href="https://www.digitala11y.com/aria-dropeffect-properties/"><abbr>WAI</abbr>-<abbr>ARIA</abbr>: aria-dropeffect (Property)</a>,
+        <i class="website">Digital A11Y</i>, 29.08.2018.
+        <br />The
+        <a href="https://www.w3.org/WAI/PF/aria-practices/20091214/#dragdrop"><abbr>WAI</abbr>-<abbr>ARIA</abbr> 1.0 Authoring Practices</a>
+        contained a section on drag-and-drop support; this section was removed from
+        <abbr>WAI</abbr>-<abbr>ARIA</abbr> Authoring Practices 1.1.
+        (<a href="https://www.w3.org/TR/wai-aria-1.1/#attrs_dragdrop"><abbr>WAI</abbr>-<abbr>ARIA</abbr> 1.1</a>
+        still lists the attributes <code>aria-dropeffect</code> and <code>aria-grabbed</code>.)
+        According to this article,
+        <q>the prior <abbr>ARIA</abbr> 1.0 guidance for making drag and drop accessible still remains valid at this time.</q>
+      </li>
     </ul>
 
     <p>Angular and accessibility:</p>
