Add: Zugang für Alle: Schweizer Accessibility-Studie  2016

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -62,6 +62,13 @@
         <a href="https://ici.radio-canada.ca/nouvelle/1152313/accessibilite-malvoyant-web-internet-quebec" hreflang="fr">Handicap visuel&nbsp;: le web toujours largement inaccessible au Québec</a>,
         <i class="website">Radio Canada</i>, 12.02.2019.
       </li>
+      <li>
+        <a href="https://www.access-for-all.ch/ch/publikationen/accessibility-studie-2016.html" hreflang="de" lang="de">Schweizer Accessibility-Studie  2016</a>,
+        <i class="website" lang="de">Zugang für Alle</i>, 2016.
+        <br />The Swiss foundation Access for all evaluated the accessibility of one hundred websites by public authorities and closely related companies,
+        and fifteen apps by news portals.
+        <!--@@download-->
+      </li>
     </ul>
 
     <h3>Accessibility and User Experience (<abbr>UX</abbr>)</h3>
