--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -384,6 +384,14 @@
         Marix Verlag, 2017.
         <a href="http://www.verlagshaus-roemerweg.de/Marix_Verlag/Birgit_Adam-Das_Buch_der_Blindenschrift-EAN:9783865392176.html"><abbr>ISBN</abbr> 978-3-86539-217-6</a>.
       </li>
+      <li>
+        <a href="https://www.cbc.ca/news/canada/british-columbia/braille-is-the-answer-to-large-unemployment-numbers-in-blind-community-says-advocate-1.4967404">Braille is the answer to large unemployment numbers in blind community, says advocate</a>,
+        <i class="website"><abbr>CBC</abbr> News</i>, 07.01.2019. Quote:
+        <blockquote>
+          <p>A recent report from the Canadian National Institute for the Blind finds more than 70 per cent of working-age blind or partially-sighted people in Canada are unemployed.</p>
+          <p>The report says the key to getting more blind people into the workplace is braille, a tactile form of writing and reading for those who are visually impaired.</p>
+        </blockquote>
+      </li>
     </ul>
 
     <h2>Ageing</h2>
