Add: Byrne-Huber: Cost per hour for Accessibility Testing

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -122,6 +122,14 @@
         <a href="http://blog.testdouble.com/posts/2015-11-16-how-to-stop-hating-your-tests">How to Stop Hating Your Tests</a>
         (RubyConf 2015).
       </li>
+      <li>Byrne-Haber, Sheri:
+        <a href="https://medium.com/@sheribyrnehaber/cost-per-hour-for-accessibility-testing-868ddf74322c">Cost per hour for Accessibility Testing</a>,
+        <i class="blog">@sheribyrnehaber on Medium</i>, 02.12.2019 (two-minute read).
+        <br /><q>Accessibility testers from established overseas consultancies can be found for as little as $20-$25 an hour. (&hellip;)
+        In the <abbr>US</abbr>, you should expect to pay the same amount for an accessibility tester as any other type of technical <abbr>QA</abbr>.</q>
+        Based on salaries for <abbr>QA</abbr> engineers, Sheri Byrne-Haber estimates that hourly contract rates would be at least $70 an hour,
+        and at least $100 an hour if you go through an agency. (These figures refer to the <abbr>USA</abbr> only.)
+      </li>
     </ul>
 
     <h2>Designing for People with Disabilities &amp; Accessibility in General</h2>
