Add: Lauke: Too much accessibility - good intentions, badly implemented

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -370,6 +370,10 @@
         <a href="https://boagworld.com/accessibility/accessibility-is-not-what-you-think/">Accessibility is Not What You Think</a>,
         <i class="blog">boagworld</i>, 09.10.2018.
       </li>
+      <li>Lauke, Patrick H.:
+        <a href="https://www.splintered.co.uk/documents/presentations/psf_accessibility_08.08.2007/">Too much accessibility&nbsp;&mdash; good intentions, badly implemented</a>,
+        <i class="website">splintered</i>, 08.08.2007.
+      </li>
     </ul>
 
     <h2>Braille</h2>
