Add: Smith: Overly Accessible?

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -374,6 +374,10 @@
         <a href="https://www.splintered.co.uk/documents/presentations/psf_accessibility_08.08.2007/">Too much accessibility&nbsp;&mdash; good intentions, badly implemented</a>,
         <i class="website">splintered</i>, 08.08.2007.
       </li>
+      <li>Smith, Jared:
+        <a href="https://webaim.org/blog/overly-accessible/">Overly Accessible?</a>
+        <i class="blog">Web<abbr>AIM</abbr> blog</i>, 28.02.2018.
+      </li>
     </ul>
 
     <h2>Braille</h2>
