Add: Andrews: Accessibility = innovation

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -370,6 +370,11 @@
         <a href="https://boagworld.com/accessibility/accessibility-is-not-what-you-think/">Accessibility is Not What You Think</a>,
         <i class="blog">boagworld</i>, 09.10.2018.
       </li>
+      <li>Andrews, Mischa:
+        <a href="https://blog.prototypr.io/accessibility-innovation-20912107fc4e">Accessibility = innovation</a>,
+        <i class="blog">Prototypr blog</i>, 25.11.2018 (7-minute read).
+        <!--@@summarise-->
+      </li>
       <li>Lauke, Patrick H.:
         <a href="https://www.splintered.co.uk/documents/presentations/psf_accessibility_08.08.2007/">Too much accessibility&nbsp;&mdash; good intentions, badly implemented</a>,
         <i class="website">splintered</i>, 08.08.2007.
