Add: Wilson: Microsoft went all in on accessible design. This is what happened afterwards

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -383,6 +383,10 @@
         <a href="https://webaim.org/blog/overly-accessible/">Overly Accessible?</a>
         <i class="blog">Web<abbr>AIM</abbr> blog</i>, 28.02.2018.
       </li>
+      <li>Wilson, Mark:
+        <a href="https://www.fastcompany.com/90432365/microsoft-went-all-in-on-accessible-design-this-is-what-happened-afterwards">Microsoft went all in on accessible design. This is what happened afterwards</a>,
+        <i class="website">Fast Company</i>, 20.11.2019.
+      </li>
     </ul>
 
     <h2>Braille</h2>
