Add: Design without Empathy

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -387,6 +387,11 @@
         <a href="https://www.fastcompany.com/90432365/microsoft-went-all-in-on-accessible-design-this-is-what-happened-afterwards">Microsoft went all in on accessible design. This is what happened afterwards</a>,
         <i class="website">Fast Company</i>, 20.11.2019.
       </li>
+      <li>
+        <a href="https://accessibility.scot/design-without-empathy/">Design without Empathy</a>,
+        <i class="website">Accessibility Scotland</i>, 23.11.2019.
+        <!--@@pdf-->
+      </li>
     </ul>
 
     <h2>Braille</h2>
