Add: Moss: Separate text-only version? No thanks!

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -392,6 +392,10 @@
         <i class="website">Accessibility Scotland</i>, 23.11.2019.
         <!--@@pdf-->
       </li>
+      <li>Moss, Trenton:
+        <a href="https://www.webcredible.com/blog/separate-text-only-version-no-thanks/">Separate text-only version? No thanks!</a>,
+        <i class="blog">Webcredible <abbr>UX</abbr> blog</i>, 01.11.2019.
+      </li>
     </ul>
 
     <h2>Braille</h2>
