Add: Byrne-Haber: Accessibility Debt — What is it? How to pay it off ???

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -394,7 +394,11 @@
       </li>
       <li>Moss, Trenton:
         <a href="https://www.webcredible.com/blog/separate-text-only-version-no-thanks/">Separate text-only version? No thanks!</a>,
-        <i class="blog">Webcredible <abbr>UX</abbr> blog</i>, 01.11.2019.
+        <i class="blog">Webcredible <abbr>UX</abbr> blog</i>, 01.11.2006.
+      </li>
+      <li>Byrne-Haber, Sheri:
+        <a href="https://medium.com/@sheribyrnehaber/accessibility-debt-what-is-it-how-to-reduce-it-8e1742080453">Accessibility Debt — What is it? How to pay it off ???</a>,
+        <i class="blog">Medium</i>, 11.06.2019 (six-minute read).
       </li>
     </ul>
 
