--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -400,6 +400,10 @@
         <a href="https://medium.com/@sheribyrnehaber/accessibility-debt-what-is-it-how-to-reduce-it-8e1742080453">Accessibility Debt — What is it? How to pay it off ???</a>,
         <i class="blog">Medium</i>, 11.06.2019 (six-minute read).
       </li>
+      <li>Metz, John:
+        <a href="https://medium.com/@jonbmetz/accessibility-is-a-process-not-a-project-ce1c1cdc3aa7#.2ai2udr4o">Accessibility is a Process, Not a Project</a>,
+        <i class="blog">Medium</i>, 17.01.2016 (seven-minute read).
+      </li>
     </ul>
 
     <h2>Braille</h2>
