--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -528,6 +528,10 @@
         <a href="https://wadcher.eu/"><abbr>WAD</abbr>cher: Web Accessibility Directive Decision Support Environment</a>:
         website of a <abbr>EU</abbr>-funded project (January 2018 – December 2020).
       </li>
+      <li><span lang="de">Fischer, Detlev:
+        <a href="https://team-usability.de/en/teamu-blog-post/simplified-monitoring.html" hreflang="de">What could "simplified monitoring" of the implementation of the Web Accessibility Directive mean?</a>,
+        <i class="website">Team Usability</i>, 15.08.2019.
+      </li>
     </ul>
 
     <h4>European Accessibility Act</h4>
