--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -532,6 +532,10 @@
         <a href="https://team-usability.de/en/teamu-blog-post/simplified-monitoring.html" hreflang="de">What could "simplified monitoring" of the implementation of the Web Accessibility Directive mean?</a>,
         <i class="website">Team Usability</i>, 15.08.2019.
       </li>
+      <li>Page, Ted:
+        <a href="https://accessible-digital-documents.com/blog/the-eu-accessibility-directive-and-pdf/">The <abbr>EU</abbr> Accessibility Directive becomes <abbr>UK</abbr> law</a>,
+        <i class="blog"><abbr title="Accessible Digital Documents">ADD</abbr> blog</i>, 23.09.2018.
+      </li>
     </ul>
 
     <h4>European Accessibility Act</h4>
