Add: Tannam: Report finds official EU websites fail users with disabilities

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -613,6 +613,10 @@
         <a href="https://www.abilitynet.org.uk/news-blogs/government-identifies-body-enforce-website-accessibility">Government identifies body to enforce website accessibility - now will they step up to the task?</a>,
         <i class="blog">AbilityNet blog</i>, 07.08.2018.
       </li>
+      <li>Tannam, Ellen:
+        <a href="https://www.siliconrepublic.com/enterprise/eu-web-accessibility-disabilities">Report finds official <abbr>EU</abbr> websites fail users with disabilities</a>,
+        <i class="website">Silicon Republic</i>, 19.02.2019.
+      </li>
     </ul>
 
     <h3>Outside the European Union</h3>
