Add: Directive 2004/18/EC (2004)

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -617,6 +617,18 @@
         <a href="https://www.siliconrepublic.com/enterprise/eu-web-accessibility-disabilities">Report finds official <abbr>EU</abbr> websites fail users with disabilities</a>,
         <i class="website">Silicon Republic</i>, 19.02.2019.
       </li>
+      <li>
+        <a href="https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:02004L0018-20160101">DIRECTIVE 2004/18/<abbr>EC</abbr> OF THE EUROPEAN PARLIAMENT AND OF THE COUNCIL of 31 March 2004 on the coordination of procedures for the award of public works contracts, public supply contracts and public service contracts</a>,
+        also known as the public procurement directive of 2004, which was valid until April 2016.
+        <!--See also https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex:32004R1874
+          which says:  No longer in force, Date of end of validity: 18/04/2016; Repealed by 32014L0025 
+        -->
+        Article 29 of this directive mentions, among other things,
+        <q>Contracting authorities should, whenever possible, lay down technical specifications so as to take into account accessibility criteria for people with disabilities or design for all users.</q>
+        <!--Chapter IV, Article 23: 1:
+          The technical specifications as defined in point 1 of Annex VI shall be set out in the contract documentation, such as contract notices, contract documents or additional documents. Whenever possible these technical specifications should be defined so as to take into account accessibility criteria for people with disabilities or design for all users.
+        -->
+      </li>
     </ul>
 
     <h3>Outside the European Union</h3>
