Add: Directive 4014/25/EU

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -621,13 +621,22 @@
         <a href="https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:02004L0018-20160101">DIRECTIVE 2004/18/<abbr>EC</abbr> OF THE EUROPEAN PARLIAMENT AND OF THE COUNCIL of 31 March 2004 on the coordination of procedures for the award of public works contracts, public supply contracts and public service contracts</a>,
         also known as the public procurement directive of 2004, which was valid until April 2016.
         <!--See also https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex:32004R1874
-          which says:  No longer in force, Date of end of validity: 18/04/2016; Repealed by 32014L0025 
+          which says: No longer in force, Date of end of validity: 18/04/2016; Repealed by 32014L0025
         -->
         Article 29 of this directive mentions, among other things,
         <q>Contracting authorities should, whenever possible, lay down technical specifications so as to take into account accessibility criteria for people with disabilities or design for all users.</q>
         <!--Chapter IV, Article 23: 1:
           The technical specifications as defined in point 1 of Annex VI shall be set out in the contract documentation, such as contract notices, contract documents or additional documents. Whenever possible these technical specifications should be defined so as to take into account accessibility criteria for people with disabilities or design for all users.
         -->
+      </li>
+      <li>
+        <a href="https://eur-lex.europa.eu/legal-content/en/TXT/?uri=CELEX:32014L0025">Directive 2014/25/<abbr>EU</abbr> of the European Parliament and of the Council of 26 February 2014 on procurement by entities operating in the water, energy, transport and postal services sectors and repealing Directive 2004/17/<abbr>EC</abbr></a>.
+        Article 60 contains the following statements regarding technical specifications:
+        <q>For all procurement which is intended for use by natural persons, whether general public or staff of the contracting entity, the technical specifications shall, except in duly justified cases, be drawn up so as to take into account accessibility criteria for persons with disabilities or design for all users.</q>
+        and
+        <q>Where mandatory accessibility requirements are adopted by a legal act of the Union, technical specifications shall, as far as accessibility criteria for persons with disabilities or design for all users are concerned, be defined by reference thereto.</q>
+        Article 81 also says,
+        <q>Contracting entities shall, where they require the production of certificates drawn up by independent bodies attesting that the economic operator complies with certain quality assurance standards, including on accessibility for disabled persons, refer to quality assurance systems based on the relevant European standards series certified by accredited bodies.</q>
       </li>
     </ul>
 
