Add: Neue BITV 2.0 in Kraft

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -617,6 +617,10 @@
         <a href="https://www.siliconrepublic.com/enterprise/eu-web-accessibility-disabilities">Report finds official <abbr>EU</abbr> websites fail users with disabilities</a>,
         <i class="website">Silicon Republic</i>, 19.02.2019.
       </li>
+      <li><span lang="de">
+        <a href="https://www.bundesfachstelle-barrierefreiheit.de/DE/Themen/EU-Webseitenrichtlinie/BGG-und-BITV-2-0/Die-neue-BITV-2-0/die-neue-bitv-2-0_node.html" hreflang="de">Neue <abbr>BITV</abbr> 2.0 in Kraft</a>,
+        <i class="website">Bundesfachstelle Barrierefreiheit</i></span>, last updated on 25.05.2019.
+      </li>
       <li>
         <a href="https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:02004L0018-20160101">DIRECTIVE 2004/18/<abbr>EC</abbr> OF THE EUROPEAN PARLIAMENT AND OF THE COUNCIL of 31 March 2004 on the coordination of procedures for the award of public works contracts, public supply contracts and public service contracts</a>,
         also known as the public procurement directive of 2004, which was valid until April 2016.
