Add: gesetze-im-internet.de: BITV 2.0 (update 21.05.2019)

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -625,6 +625,10 @@
         <a href="https://www.gesetze-im-internet.de/bitv_2_0/BJNR184300011.html" hreflang="de">Verordnung zur Schaffung barrierefreier Informationstechnik nach dem Behindertengleichstellungsgesetz (Barrierefreie-Informationstechnik-Verordnung - <abbr>BITV</abbr> 2.0)</a>,
         <i class="website">Bundesministerium der Justiz und für Verbraucherschutz</i></span>.
       </li>
+      <li><span lang="de">Bundesministerium der Justiz und für Verbrauchershutz:
+        <a href="http://www.gesetze-im-internet.de/bitv_2_0/BJNR184300011.html">Verordnung zur Schaffung barrierefreier Informationstechnik nach dem Behindertengleichstellungsgesetz (Barrierefreie-Informationstechnik-Verordnung - <abbr>BITV</abbr> 2.0)</a>,
+        <i class="website">Gesetze im Internet</i></span>, 12.09.2011, updated 21.05.2019.
+      </li>
       <li>
         <a href="https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:02004L0018-20160101">DIRECTIVE 2004/18/<abbr>EC</abbr> OF THE EUROPEAN PARLIAMENT AND OF THE COUNCIL of 31 March 2004 on the coordination of procedures for the award of public works contracts, public supply contracts and public service contracts</a>,
         also known as the public procurement directive of 2004, which was valid until April 2016.
