Add: Stichting Accessibility: Wet- en regelgeving

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -650,6 +650,10 @@
         Article 81 also says,
         <q>Contracting entities shall, where they require the production of certificates drawn up by independent bodies attesting that the economic operator complies with certain quality assurance standards, including on accessibility for disabled persons, refer to quality assurance systems based on the relevant European standards series certified by accredited bodies.</q>
       </li>
+      <li><span lang="nl">
+        <a href="https://www.accessibility.nl/over-toegankelijkheid/wetgeving/" hreflang="nl">Wet- en regelgeving</a>,
+        <i class="website">Stichting Accessibility</i></span> (no date).
+      </li>
     </ul>
 
     <h3>Outside the European Union</h3>
