--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -713,6 +713,14 @@
       </li>
     </ul>
 
+    <p>Voluntary Product Accessibility Template (<abbr>VPAT</abbr>):</p>
+    <ul>
+      <li>
+        <a href="https://www.section508.gov/sell/vpat">Voluntary Product Accessibility Template (<abbr>VPAT</abbr>)</a>,
+        <i class="website">Section508.gov</i>, updated in April 2018.
+      </li>
+    </ul>
+
     <h2>Accessibility in the Physical World</h2>
     <ul>
       <li>TravelWayfinding.com: 
