Add: ITIC: VPAT resources

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -719,6 +719,10 @@
         <a href="https://www.section508.gov/sell/vpat">Voluntary Product Accessibility Template (<abbr>VPAT</abbr>)</a>,
         <i class="website">Section508.gov</i>, updated in April 2018.
       </li>
+      <li>
+        <a href="https://www.itic.org/advocacy/resources/?policy=VPAT"><abbr>VPAT</abbr>® resources</a>,
+        <i class="website">Information Technology Industry Council (<abbr>ITIC</abbr>)</i>.
+      </li>
     </ul>
 
     <h2>Accessibility in the Physical World</h2>
