--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -720,6 +720,13 @@
         <i class="website">Section508.gov</i>, updated in April 2018.
       </li>
       <li>
+        <a href="https://www.itic.org/policy/accessibility/vpat"><abbr>VPAT</abbr>®</a>,
+        <i class="website">Information Technology Industry Council (<abbr>ITIC</abbr>)</i>, 2019.
+        <br />This page contains information and links for <abbr>VPAT</abbr> 2.3 from April 2019.
+        This includes <abbr>VPAT</abbr> 2.3 <abbr>EU</abbr> for reporting conformance to the European standard <abbr>EN</abbr> 301 549.
+        <!--@@download-->
+      </li>
+      <li>
         <a href="https://www.itic.org/advocacy/resources/?policy=VPAT"><abbr>VPAT</abbr>® resources</a>,
         <i class="website">Information Technology Industry Council (<abbr>ITIC</abbr>)</i>.
       </li>
