--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -879,6 +879,9 @@
       <li>
         <a href="http://simplyaccessible.com/articles/">Simply Accessible: Articles</a>.
       </li>
+      <li>
+        <a href="https://a11yship.de/" hreflang="de"><abbr>A11y</abbr>ship</a>.
+      </li>
       <li><a href="http://sp1ral.com/">Wendy Chisholm</a>.
         <!--@@former career at W3C; now at Microsoft; not all blog post are about accessibility-->
         Until 2009, this blog was maintained on
