Add: Umfassende Barrierefreiheit von Webangeboten – EU-Richtlinie 2102

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -528,6 +528,10 @@
         <a href="https://www.fronta11y.org/gesetzliche-herausforderungen-zur-digitalen-barrierefreiheit-durch-die-eu-richtlinie-2016-2102/">Gesetzliche Herausforderungen zur digitalen Barrierefreiheit durch die <abbr>EU</abbr>-Richtlinie 2016/2102</a></span>,
         <i class="website">Fronta11y</i>, 17.05.2018.
       </li>
+      <li><span lang="de">
+        <a href="https://www.gemeindetag-bw.de/themen/inklusion/umfassende-barrierefreiheit-von-webangeboten-%E2%80%93-eu-richtlinie-2102" hreflang="de">Umfassende Barrierefreiheit von Webangeboten – <abbr>EU</abbr>-Richtlinie 2102</a>,
+        <i class="website">Gemeindetag Baden-Württemberg</i></span> (no date; after 12.12.2018).
+      </li>
       <li>
         <a href="https://wadcher.eu/"><abbr>WAD</abbr>cher: Web Accessibility Directive Decision Support Environment</a>:
         website of a <abbr>EU</abbr>-funded project (January 2018 – December 2020).
