Add: Felman: VPAT 2.0: Accessibility Compliance Reporting (IS AWESOME)

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -743,6 +743,10 @@
         <a href="https://www.itic.org/advocacy/resources/?policy=VPAT"><abbr>VPAT</abbr>® resources</a>,
         <i class="website">Information Technology Industry Council (<abbr>ITIC</abbr>)</i>.
       </li>
+      <li>Feldman, Matt:
+        <a href="https://www.youtube.com/watch?v=s47FjIjwp_A"><abbr>VPAT</abbr> 2.0: Accessibility Compliance Reporting (IS AWESOME)</a>
+        (<i class="ytchannel">The Paciello Group</i> on YouTube, 43 minutes, streamed live on 17.05.2018).
+      </li>
     </ul>
 
     <h2>Accessibility in the Physical World</h2>
