Add: Daan: How Accessibility Gets More and More Important in Web Development

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1360,6 +1360,10 @@
       <li>Business Disability Forum:
         <a href="https://members.businessdisabilityforum.org.uk/resource-category/resource/accessible-technology-charter-accessibility-maturity-model/">Accessible Technology Charter: Accessibility Maturity Model</a>.
       </li>
+      <li><span lang="nl">Daan</span>:
+        <a href="https://medium.com/better-programming/how-accessibility-gets-more-and-more-important-in-web-development-714fbc4d6114">How Accessibility Gets More and More Important in Web Development</a>,
+        <i class="blog">BetterProgramming on Medium</i>, 07.11.2019.
+      </li>
       <li>
         <a href="https://www.w3.org/WAI/GL/Glossary/printable.html"><abbr>WAI</abbr> (Printable) Glossary</a>,
         last updated in 01.03.2003.
