Add: WCAG 2.0 Validators and Web Accessibility Remediation Solutions: What are Your Options?

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1375,6 +1375,10 @@
       </li>
       -->
       <li>
+        <a href="https://www.essentialaccessibility.com/blog/wcag-validators/"><abbr>WCAG</abbr> 2.0 Validators and Web Accessibility Remediation Solutions: What are Your Options?</a>,
+        <i class="blog">Essential Accessibility</i>, 13.03.2017.
+      </li>
+      <li>
         <a href="https://ux.stackexchange.com/q/20902/91974">Accessibility for non-web desktop applications</a>:
         a question posted on User Experience Stack Exchange in May 2012.
         <!--@@post answer based on WCAG2ICT: https://www.w3.org/WAI/standards-guidelines/wcag/non-web-ict/ & https://www.w3.org/TR/wcag2ict/
