--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1379,6 +1379,9 @@
         <i class="blog">Essential Accessibility</i>, 13.03.2017.
       </li>
       <li>
+        <a href="http://di-ji.de/" hreflang="de" lang="de">Digital informiert - im Job integriert - <abbr>Di-Ji</abbr></a>.
+      </li>
+      <li>
         <a href="https://ux.stackexchange.com/q/20902/91974">Accessibility for non-web desktop applications</a>:
         a question posted on User Experience Stack Exchange in May 2012.
         <!--@@post answer based on WCAG2ICT: https://www.w3.org/WAI/standards-guidelines/wcag/non-web-ict/ & https://www.w3.org/TR/wcag2ict/
