Add: Lee: Ein Blinder öffnet uns die Augen

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1381,6 +1381,12 @@
       <li>
         <a href="http://di-ji.de/" hreflang="de" lang="de">Digital informiert - im Job integriert - <abbr>Di-Ji</abbr></a>.
       </li>
+      <li>Lee, David:
+        <a href="https://www.digitec.ch/de/page/ein-blinder-oeffnet-uns-die-augen-9913" hreflang="de" lang="de">Ein Blinder öffnet uns die Augen</a>,
+        <i class="blog">digitec blog</i>,  21.01.2019.
+        A company has its webshop tested by a blind user and finds that it is not very accessible.
+        They then write an honest report about this on their own blog.
+      </li>
       <li>
         <a href="https://ux.stackexchange.com/q/20902/91974">Accessibility for non-web desktop applications</a>:
         a question posted on User Experience Stack Exchange in May 2012.
