--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1387,6 +1387,10 @@
         A company has its webshop tested by a blind user and finds that it is not very accessible.
         They then write an honest report about this on their own blog.
       </li>
+      <li><span lang="de">Appel, Nicola:
+        <a href="https://www.pinkuniversity.de/blog/barrierefreie-weiterbildung-e-learning-davon-profitieren-alle/" hreflang="de">Sonja Weckenmann, <abbr>BIK</abbr>: „Barrierefreie Weiterbildung – davon profitieren am Ende alle“</a></span>,
+        <i class="blog">Pink University blog</i>, 04.08.2016.
+      </li>
       <li>
         <a href="https://ux.stackexchange.com/q/20902/91974">Accessibility for non-web desktop applications</a>:
         a question posted on User Experience Stack Exchange in May 2012.
