Add: Viscomi: The State of Accessibility

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1391,6 +1391,15 @@
         <a href="https://www.pinkuniversity.de/blog/barrierefreie-weiterbildung-e-learning-davon-profitieren-alle/" hreflang="de">Sonja Weckenmann, <abbr>BIK</abbr>: „Barrierefreie Weiterbildung – davon profitieren am Ende alle“</a></span>,
         <i class="blog">Pink University blog</i>, 04.08.2016.
       </li>
+      <li>Viscomi, Rick:
+        <a href="https://dev.to/rick_viscomi/the-state-of-accessibility-5gfa">The State of Accessibility</a>,
+        <i class="website">DEV Community</i>, 10.01.2019.
+        <br />This page contains an embedded YouTube video of a 30-minute interview with
+        Nektarios Paisios, a software engineer on the Chrome Accessibility team.
+        The main takeaways from the video are summarised below the video.
+        Note that the first point, <q>we should see a11y as a feature of our website</q>,
+        is rather contentious.
+      </li>
       <li>
         <a href="https://ux.stackexchange.com/q/20902/91974">Accessibility for non-web desktop applications</a>:
         a question posted on User Experience Stack Exchange in May 2012.
