BIK für Alle: Barrierefrei informieren und kommunizieren

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1410,6 +1410,10 @@
           ISO/IEC TR 13066-4:2015: Information technology -- Interoperability with assistive technology (AT) -- Part 4: Linux/UNIX graphical environments accessibility API: https://www.iso.org/standard/54001.html
         -->
       </li>
+      <li>
+        <a href="https://bik-fuer-alle.de/" hreflang="de" lang="de"><abbr>BIK</abbr> für Alle: Barrierefrei informieren und kommunizieren</a>.
+        (This project ended in 2018.)
+      </li>
     </ul>
 
     <p>Artifial intelligence (<abbr>AI</abbr>) and accessibility:</p>
