Add: Hansen: Accessibility is not a 'Feature', and Developers Should Never Treat it as Such

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1400,6 +1400,12 @@
         Note that the first point, <q>we should see a11y as a feature of our website</q>,
         is rather contentious.
       </li>
+      <li>Hansen, Michael:
+        <a href="https://www.applevis.com/blog/advocacy-ios-apps-opinion/accessibility-not-feature-and-developers-should-never-treat-it-such"> Accessibility is not a 'Feature', and Developers Should Never Treat it as Such</a>,
+        <i class="blog">AppleVis blog</i>, 14.01.2016, updated 26.02.2017.
+        <br />Some companies implement &ldquo;accessibility&rdquo; based on feature requests. However,
+        <q>implementing accessibility support is an essential part of the design process which ensures all users have equal access to an app</q>.
+      </li>
       <li>
         <a href="https://ux.stackexchange.com/q/20902/91974">Accessibility for non-web desktop applications</a>:
         a question posted on User Experience Stack Exchange in May 2012.
