--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -813,6 +813,14 @@
         (Copy of a document from 1992; only of historical interest now. See also the
         <a href="http://itd.athenpro.org/volume2/number2/icadd.html">Information Technology and Disabilities Journal, Volume II, Number 2, May 1995</a>.)
       </li>
+      <li><span lang="de">
+        <a href="https://www.daserste.de/specials/service/barrierefreie-angebote-ard100.html" hreflang="de">Barrierefreie Angebote im Ersten</a>,
+        <i class="website">Das Erste</i></span>, 20.08.2019.
+        <br />This article claims that in 2018, cose to 98% of the channel's broadcasts had captions:
+        <q lang="de">Insgesamt waren 2018 knapp 98  Prozent des Angebots  im Ersten mit Untertiteln versehen.</q>
+        Close to 52% of broadcasts in 2018 had audio description:
+        <q lang="de">Für knapp 52 Prozent des Hauptabendprogramms im Ersten gab es 2018 eine Audiodeskription, vor einem Jahr waren es nur knapp 50 %.</q>
+      </li>
     </ul>
 
   </main>
