Add: Accessibility is not a feature; it’s a social movement.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1411,6 +1411,10 @@
         <i class="blog"><abbr>SAP</abbr> Blogs</i>, 16.03.2018 (3-minute read).
       </li>
       <li>
+        <a href="https://www.accessibility.org.au/the-centre/campaign/">Accessibility is not a feature; it’s a social movement.</a>
+        Campaign by the Centre for Accessibility in Australia.
+      </li>
+      <li>
         <a href="https://ux.stackexchange.com/q/20902/91974">Accessibility for non-web desktop applications</a>:
         a question posted on User Experience Stack Exchange in May 2012.
         <!--@@post answer based on WCAG2ICT: https://www.w3.org/WAI/standards-guidelines/wcag/non-web-ict/ & https://www.w3.org/TR/wcag2ict/
