Add: Marcotte: Accessibility is not a feature

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1414,6 +1414,12 @@
         <a href="https://www.accessibility.org.au/the-centre/campaign/">Accessibility is not a feature; it’s a social movement.</a>
         Campaign by the Centre for Accessibility in Australia.
       </li>
+      <li>Marcotte, Ethan:
+        <a href="https://ethanmarcotte.com/wrote/accessibility-is-not-a-feature/">Accessibility is not a feature</a>,
+        <i class="blog">Ethan Marcotte</i>, 31.08.2018.
+        <br />This article breaks down the concept &ldquo;accessibility&rdquo; into two sub-components:
+        <em>navigable</em> and <em>usable</em>.
+      </li>
       <li>
         <a href="https://ux.stackexchange.com/q/20902/91974">Accessibility for non-web desktop applications</a>:
         a question posted on User Experience Stack Exchange in May 2012.
