--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1431,6 +1431,9 @@
         -->
       </li>
       <li>
+        <a href="http://akbi.de/" hreflang="de" lang="de">Arbeitskreis barrierefreies Internet <abbr>e. V.</abbr></a>.
+      </li>
+      <li>
         <a href="https://bik-fuer-alle.de/" hreflang="de" lang="de"><abbr>BIK</abbr> für Alle: Barrierefrei informieren und kommunizieren</a>.
         (This project ended in 2018.)
       </li>
