--- a/courses.html
+++ b/courses.html
@@ -122,7 +122,7 @@
         <a href="https://www.edx.org/course/web-accessibility-introduction">Introduction to Web Accessibility</a>
         is a five-week course by the World Wide Web Consortium (<abbr>W3C</abbr>) hosted on edX.
         The course requires an estimated 4 to 5 hours of study per week.
-        The first run is scheduled to start on 08.01.2020.
+        The first run started on 28.01.2020.
       </li>
       <li>Sutton, Marcy:
         <a href="https://egghead.io/courses/start-building-accessible-web-applications-today">Start Building Accessible Web Applications Today</a>,
