Add: Anthony: The Aesthetic-Accessibility Paradox

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1430,6 +1430,29 @@
           ISO/IEC TR 13066-4:2015: Information technology -- Interoperability with assistive technology (AT) -- Part 4: Linux/UNIX graphical environments accessibility API: https://www.iso.org/standard/54001.html
         -->
       </li>
+      <li>anthony:
+        <a href="https://uxmovement.com/thinking/the-aesthetic-accessibility-paradox/">The Aesthetic-Accessibility Paradox</a>,
+        <i class="website"><abbr>UX</abbr> Movement</i>, 14.11.2019.
+        <!--referenced by Detlev Fischer, 22.11.2019: https://twitter.com/wcagtest/status/1197833747837706245 -->
+        <br />This article is misleading because it contains several misconceptions and inconsistencies about accessibility.
+        First, it divides users into two groups, a majority with normal vision and a minority with some form of visual impairment,
+        instead of recognising that there is a spectrum (rather than &ldquo;us&rdquo; versus &ldquo;them&rdquo;).
+        Second, the article seems to suggest that people with a visual impairment, including blindness, tend to &dquo;see&rdquo; the same thing:
+        <q>blurry text and faint elements when text sizes and color contrasts are too low</q>.
+        Third, it rehashes the long exploded theory that accessibility and aesthetics:
+        <q>the more accessible an interface is, the less aesthetic appeal it has</q>. This is a nonsensical generalisation;
+        moreover, the author proves himself wrong.
+        The author also claims that, <q>Most users with extreme visual impairments use screen readers that provide high contrast modes</q>,
+        whereas most screen readers<!--JAWS, NVDA, Orca--> don't provide high contrast modes (some combine screen reader and magnifier functions).
+        Moreover, the author appears to be unaware of the fact that some users need lower contrast, for example, some people with dyslexia or the Irlen syndrome.
+        Finally, the article creates the myth of &ldquo;accessibility extremists&rdquo;:
+        <q>Accessibility extremists tend to discount aesthetics.</q>
+        <br />For other comments, see
+        <a href="https://twitter.com/stevefaulkner/status/1197836591533826049">Steve Faulkner's twee, 22.11.2019</a>.
+      </li>
+      <!--Other article by same author: "The Myths of Color Contrast Accessibility", 16.10.2019: https://uxmovement.com/buttons/the-myths-of-color-contrast-accessibility/
+            Response by Andrew Somers, Senior Color Science Researcher, Myndex Technologies, 17.10.2019, https://uxmovement.com/buttons/the-myths-of-color-contrast-accessibility/#comment-92567
+      -->
       <li>
         <a href="http://akbi.de/" hreflang="de" lang="de">Arbeitskreis barrierefreies Internet <abbr>e. V.</abbr></a>.
       </li>
