--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1457,6 +1457,9 @@
         <a href="http://akbi.de/" hreflang="de" lang="de">Arbeitskreis barrierefreies Internet <abbr>e. V.</abbr></a>.
       </li>
       <li>
+        <a href="http://ftb-esv.de/" hreflang="de" lang="de"><abbr>FTB</abbr> (Forschungsinstitut Technologie und Behinderung)</a>.
+      </li>
+      <li>
         <a href="https://bik-fuer-alle.de/" hreflang="de" lang="de"><abbr>BIK</abbr> für Alle: Barrierefrei informieren und kommunizieren</a>.
         (This project ended in 2018.)
       </li>
