Add: Lauke: These aren't the SCs you're looking for...

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -89,6 +89,15 @@
             <i class="website">Intopia</i>, 26.07.2018.
             <!--@@download map-->
           </li>
+          <li>Lauke, Patrick:
+            <a href="https://www.youtube.com/watch?v=I0tghv881ac">These aren't the <abbr>SC</abbr>s you're looking for ... (mis)adventures in <abbr>WCAG</abbr> 2.x interpretation and audits</a>
+            (<i class="ytchannel">Patrick Lauke</i> on YouTube, 43 minutes, 04.01.2020).
+            <br />See also the
+            <a href="https://patrickhlauke.github.io/wcag-interpretation/">slides for &ldquo;These aren't the <abbr>SC</abbr>s you're looking for&hellip;&rdquo;</a>.
+            <!--Also on slideshare: https://www.slideshare.net/redux/these-arent-the-scs-youre-looking-for-misadventures-in-wcag-2x-interpretation-and-audits-a11yto-24-october-2019
+              Speaker Deck: https://speakerdeck.com/patrickhlauke/24-october-2019
+            -->
+          </li>
         </ul>
         <br />The following blog posts, articles and resources were written or
         created while <abbr>WCAG</abbr> was still under development:
